fix: conflict on duplicate email
